--- a/Iris.html
+++ b/Iris.html
@@ -8,5 +8,5 @@
 <body>
 <h1 id="tituloAnimado">✨ Gracias por jugar mi libro interactivo de Iris :) ✨</h1>
 
-<h1>Aqui te dejo el link del libro de Iris para que lo leas</h1>
+<h1>Aqui te dejo el link del libro de Iris para que lo leas 👇🏽</h1>
  https://docs.google.com/document/d/1TpX3ul8TQhIzxPVzEPUs0_maDBcP6iaCITZhDyNvVhQ/edit?usp=sharing
